# NHSSynth

./: .gitignore  .poetry-sync-db.json  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LEVELS_OF_RAP.md  OPEN_CODE_CHECKLIST.md  README.md  SECURITY.md  index.html  mkdocs.yml  modules.drawio  notes.md  objects.inv  pyproject.toml  requirements.txt  sitemap.xml  tox.ini
.github/: cloc.sh
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: black_and_isort.yaml  black_and_ruff.yaml  build_mkdocs.yaml  ci.yaml  coverage_badge.yaml  dynamic_badges.yaml  tox_pytest.yaml  tox_tests.yaml
auxiliary/: MIMIC_preproc.ipynb  col_comparisons.ipynb  debug_synthetic_fidelity_clean.ipynb  diagnose_hypertension.py  generate_SUPPORT.ipynb  mwe.ipynb  mwe_hypertension.ipynb  mwe_hypertension_backup.ipynb  mwe_optimized.ipynb  synthcity_comparison.ipynb
config/: .gitignore  comparison_gan_vae_support.yaml  dataloader_test.yaml  model_test.yaml  test.yaml  test_dataloader.yaml  test_evaluation.yaml  test_model.yaml  test_pipeline.yaml  test_pipeline_hypertension.yaml  test_plotting.yaml
css/: mkdocstrings.css  style.css
data/: .gitignore  support.csv  support_metadata.yaml  support_pycox_metadata.yaml
development_guide/: index.html
docs/: development_guide.md  downstream_tasks.md  gen_ref_pages.py  getting_started.md  index.md  metatransformer.drawio  model_card.md  models.md  modules.drawio  modules.md  new_dataset_guide.md  running_an_experiment.md  secure_mode.md
docs/css/: mkdocstrings.css
downstream_tasks/: index.html
getting_started/: index.html
model_card/: index.html
models/: index.html
modules/: index.html
new_dataset_guide/: index.html
reference/SUMMARY/: index.html
reference/autorefs/plugin/: index.html
reference/autorefs/references/: index.html
reference/cli/: index.html
reference/cli/common_arguments/: index.html
reference/cli/config/: index.html
reference/cli/model_arguments/: index.html
reference/cli/module_arguments/: index.html
reference/cli/module_setup/: index.html
reference/cli/run/: index.html
reference/common/: index.html
reference/common/common/: index.html
reference/common/constants/: index.html
reference/common/debugging/: index.html
reference/common/dicts/: index.html
reference/common/io/: index.html
reference/common/strings/: index.html
reference/modules/: index.html
reference/modules/dashboard/: index.html
reference/modules/dashboard/Upload/: index.html
reference/modules/dashboard/io/: index.html
reference/modules/dashboard/pages/: index.html
reference/modules/dashboard/run/: index.html
reference/modules/dashboard/utils/: index.html
reference/modules/dataloader/: index.html
reference/modules/dataloader/constraints/: index.html
reference/modules/dataloader/io/: index.html
reference/modules/dataloader/metadata/: index.html
reference/modules/dataloader/metatransformer/: index.html
reference/modules/dataloader/missingness/: index.html
reference/modules/dataloader/run/: index.html
reference/modules/dataloader/transformers/: index.html
reference/modules/evaluation/: index.html
reference/modules/evaluation/aequitas/: index.html
reference/modules/evaluation/fairness/: index.html
reference/modules/evaluation/full_report/: index.html
reference/modules/evaluation/io/: index.html
reference/modules/evaluation/metrics/: index.html
reference/modules/evaluation/run/: index.html
reference/modules/evaluation/tasks/: index.html
reference/modules/evaluation/utils/: index.html
reference/modules/model/: index.html
reference/modules/model/DPVAE/: index.html
reference/modules/model/common/: index.html
reference/modules/model/io/: index.html
reference/modules/model/models/: index.html
reference/modules/model/run/: index.html
reference/modules/model/utils/: index.html
reference/modules/plotting/: index.html
reference/modules/plotting/io/: index.html
reference/modules/plotting/plot/: index.html
reference/modules/plotting/plots/: index.html
reference/modules/plotting/run/: index.html
reference/modules/structure/: index.html
reference/modules/structure/run/: index.html
reference/utils/: index.html
reference/utils/constants/: index.html
reference/utils/utils/: index.html
running_an_experiment/: index.html
scripts/: gen_redirects.py
search/: search_index.json
secure_mode/: index.html
src/nhssynth/cli/: __main__.py  argparse.py  arguments.py  common_arguments.py  config.py  model_arguments.py  module_arguments.py  module_setup.py  run.py
src/nhssynth/common/: __init__.py  common.py  constants.py  debugging.py  dicts.py  io.py  rmsnorm.py  strings.py
src/nhssynth/modules/: README.md  __init__.py
src/nhssynth/modules/dashboard/: Upload.py  io.py  run.py  utils.py
src/nhssynth/modules/dataloader/: constraints.py  io.py  metadata.py  metatransformer.py  missingness.py  run.py  transformers.py  utils.py
src/nhssynth/modules/evaluation/: aequitas.py  fairness.py  full_report.py  io.py  metrics.py  run.py  tasks.py  utils.py
src/nhssynth/modules/model/: DPVAE.py  __init__.py  io.py  run.py  (+1 more)
src/nhssynth/utils/: __init__.py  constants.py  utils.py
tasks/: .gitignore
tasks/hypertension_synthetic/: logreg.py
tasks/support/: logreg.py  randomforest.py
tests/: conftest.py  test_constraints_repair.py  test_mixture_propagation.py
tests/common/: test_common.py  test_dicts.py  test_io.py  test_strings.py
tests/modules/evaluation/: test_fairness.py
tests/modules/model/: test_model_io.py  test_models.py
(+60 files in other folders)
